# backend-finance-tracker

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
scripts/: start.sh
src/: main.py
src/application/__common__/errors/: account_not_found.py  base_errors.py  password_invalid.py  user_already_exists.py  user_not_found.py
src/application/__common__/ports/jwt_service/: jwt_service.py
src/application/__common__/ports/password_hasher_service/: password_hasher_service.py
src/application/__common__/validators/: account_not_found.py  password_invalid.py  user_already_exists.py  user_not_found.py
src/domains/__common__/: enums.py
src/domains/account/: enums.py  errors.py  models.py  value_objects.py
src/domains/category/: errors.py  models.py  value_objects.py
src/domains/transaction/: enums.py  errors.py  models.py  value_objects.py
src/domains/user/: errors.py  models.py  value_objects.py
src/infrastructure/__common__/errors/: base_errors.py  jwt_error.py
src/infrastructure/jwt/: adapter.py
src/infrastructure/password_hasher/: adapter.py
src/infrastructure/persistence/: db_provider.py
src/infrastructure/persistence/adapters/: account.py  category.py  entity_saver.py  transaction.py  transaction_db.py  user.py
src/infrastructure/persistence/alembic/: env.py
src/infrastructure/persistence/models/: account.py  category.py  transaction.py  user.py
src/presentation/http/v1/routers/: user.py  (+3 more)
src/setup/: apps.py  configs.py  db_tables.py  exc_handlers.py  ioc.py  middlewares.py
tests/integrations/http/v1/: conftest.py
tests/unit/: test_errors.py
tests/unit/application/: conftest.py
tests/unit/domains/account/: conftest.py  test_models.py
tests/unit/domains/category/: conftest.py  test_models.py  test_value_objects.py
tests/unit/domains/transaction/: conftest.py  test_models.py  test_value_objects.py
tests/unit/domains/user/: conftest.py  test_models.py  test_value_objects.py
(+64 files in other folders)
