[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "backend-finance-tracker"
dynamic = ["version"]
description = "Finance tracker API"
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "dishka==1.*",
    "fastapi==0.115.*",
    "alembic==1.13.*",
    "sqlalchemy[asyncio]==2.*",
    "psycopg[binary]==3.*",
    "pyjwt[crypto]==2.10.1",
    "python-dotenv==1.0.*",
    "uvicorn==0.31.*",
    "orjson==3.*", # ORJSONResponse
    "argon2-cffi==25.1.0", # PasswordHasher
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
lint = [
    "ruff",
    "pyright==1.1.405",
]

[tool.pytest.ini_options]
xfail_strict = true
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = ["value_objects"]
